# pokemon-apps

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
dollop/: .eslintrc.json  Dockerfile  app.js  app.ts  package.json  tsconfig.json  typings.json  wait-for.sh  worker.ts
dollop/database/: mongodb.ts
dollop/database/models/: pokemon-model.ts
dollop/services/: pokemon-service.ts
dollop/utils/: logger.js  logger.ts
fastapp/: Dockerfile  app.py  main.py  pyproject.toml  settings.py  utils.py  wait-for-rabbitmq.sh
fastapp/database/: models.py  mongodb.py
fastapp/routers/: pokemon.py
fastapp/services/: publisher.py
glimmer/: .babelrc  .eslintrc.json  Dockerfile  next.config.js  package.json
glimmer/pages/: _app.tsx  index.js  index.tsx
glimmer/pages/pokemon/: [id].tsx
glimmer/src/components/: Badge.styles.ts  Badge.tsx  Home.styles.ts  Home.tsx  PokemonCard.styles.ts  PokemonCard.tsx  PokemonList.styles.ts  PokemonList.tsx
glimmer/src/services/: api-service.ts  api-service.tsx  types.ts
glimmer/src/templates/: Home.styles.ts  Home.tsx
glimmer/src/types/: Pokemon.ts
goapp/: Dockerfile  go.mod  go.sum  main.go
goapp/db/: db.go
goapp/rabbit/: rabbit.go
goapp/utils/: utils.go
proxy/: Dockerfile  default.conf  nginx.conf
valtr/: Dockerfile  package.json
valtr/src/: App.tsx
valtr/src/types/: Pokemon.ts
