[tool.poetry]
name = "fastapp"
version = "0.1.0"
description = ""
authors = ["guilherme <guile.hm@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
install = "^1.3.4"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
httpx = "^0.18.1"
gunicorn = "^20.1.0"
aio-pika = "^6.8.0"
motor = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
